trustfall_core/test_data/tests/valid_queries/transform_with_tagged_argument.graphql.ron
TestGraphQLQuery (
    schema_name: "numbers",
    query: r#"
{
    One {
        value @transform(op: "+", value: ["$ten"]) @tag

        value
            @output
            @transform(op: "+", value: ["%value"])
            @output
    }
}"#,
    arguments: {
        "ten": Int64(10),
    },
)
