trustfall_core/test_data/tests/parse_errors/invalid_transform_supplying_multiple_arguments_for_add_op.graphql.ron
TestGraphQLQuery (
    schema_name: "numbers",
    query: r#"
{
    Two {
        # The "+" transform operator accepts only a single argument.
        value @transform(op: "+", value: ["$first", "$second"]) @output
    }
}"#,
    arguments: {
        "first": Int64(1),
        "second": Int64(2),
    },
)
